--- a/resources/[mythic]/mythic-base/package.json
+++ b/resources/[mythic]/mythic-base/package.json
@@ -4,7 +4,6 @@
     "main": "./core/sv_database.js",
     "license": "MIT",
     "dependencies": {
-        "faker": "^5.5.3",
-        "mongodb": "^3.6.6"
+        "faker": "^5.5.3"
     }
 }
