--- a/configs/example.environment.cfg
+++ b/configs/example.environment.cfg
@@ -21,7 +21,7 @@ sets sv_projectDesc "Mythic RP"
 # Server Tags
 sets tags "rp"
 
-set mysql_connection_string "mysql://root@localhost/mythicrp?charset=utf8mb4"
+set mysql_connection_string "mysql://root@localhost/mythic?charset=utf8mb4"
 set mysql_slow_query_warning 300
 #set mysql_debug true
 set mysql_ui true
@@ -34,11 +34,6 @@ set discord_kill_webhook ""
 set discord_pwnzor_webhook ""
 set discord_error_webhook ""
 
-# MongoDB Connections
-set mongodb_auth_url "mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
-set mongodb_auth_database "auth"
-set mongodb_game_url "mongodb://localhost:27017/?readPreference=primary&appname=MongoDB%20Compass&ssl=false"
-set mongodb_game_database "fivem"
 
 set api_address "https://mythicrp.com/api/mythic/"
 set api_token "setme"
